--- a/Dockerfile-1.38.28
+++ b/Dockerfile-1.38.28
@@ -48,9 +48,9 @@ RUN emcc --version \
     && rm -rf /tmp/emscripten_test \
     && echo "All done."
 
-RUN apt update && apt install -y wget meson ninja-build pkg-config autopoint libtool m4 automake patch g++ locales unicode autoconf python3
+RUN apt update && apt install -y wget ninja-build meson pkg-config python3 autopoint libtool autoconf patch g++ locales curl
 # The following packages are needed for meson build, even if they are unused for compilation
-RUN apt install -y zlib1g-dev libicu-dev libxapian-dev liblzma-dev
+RUN apt install -y zlib1g-dev libicu-dev libxapian-dev liblzma-dev libcurl4-openssl-dev
 
 # Set the locale to UTF-8
 RUN sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && locale-gen
