Add VOLUMEs in Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,4 +9,9 @@ RUN apt-get update && apt-get install -y wget ninja-build meson pkg-config pytho
 RUN sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && locale-gen
 ENV LANG en_US.UTF-8  
 ENV LANGUAGE en_US:en  
-ENV LC_ALL en_US.UTF-8 
+ENV LC_ALL en_US.UTF-8
+
+# Indicates that the sources to compile should be mounted in /src when running the container
+VOLUME /src
+# It's better to keep the emscripten cache between builds to improve performance
+VOLUME /root/.emscripten_cache
