Cleanup and avoid re-downloading source code when it's already there

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,14 @@
 /nbproject/private/
 /build/
+/xz-*/
 /zlib-*/
 /zstd-*/
-/xz-*/
-/xz-*.tar.gz*
 /icu/
-/icu4c-*.tgz*
-/zlib-*.tar.gz*
-/zstd-*.tar.gz*
-/xapian-core-*.tar.xz*
-/libzim-*.tar.gz
 /xapian*/
 /libzim*/
-/pugixml*/
-/pugixml-*.tar.gz
-/aria2*/
-/aria2-*.tar.gz
-/kiwix-lib*/
-/kiwixlib*/
-/libkiwix*/
-/kiwix-lib-*.tar.gz
-/libkiwix-*.tar.gz
-/curl*/
-/curl-*.tar.gz
-/Mustach*/
-/mustach*/
-/mustach*.tar.gz
+/xz-*.tar.gz
+/zlib-*.tar.gz
+/zstd-*.tar.gz
+/icu4c-*.tgz
+/xapian-core-*.tar.xz
+/libzim-*.tar.gz
