Update zlib to 1.2.13
And update the generated wasm file (with newer zlib)
And update netbeans conf files

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,9 @@
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
+browser.run=true
+file.reference.git-javascript-libzim=.
 file.reference.git-libzim_wasm=.
 files.encoding=UTF-8
-site.root.folder=${file.reference.git-libzim_wasm}
-source.folder=${file.reference.git-libzim_wasm}
+site.root.folder=${file.reference.git-javascript-libzim}
+source.folder=${file.reference.git-javascript-libzim}
+start.file=index.html
+web.context.root=/javascript-libzim
