--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,12 +2,15 @@
 FROM emscripten/emsdk:3.1.12
 
 # Install build tools
-RUN apt-get update && apt-get install -y wget ninja-build pkg-config python3 autopoint libtool autoconf patch g++ locales curl git \
+RUN apt-get update && apt-get install -y --no-install-recommends wget ninja-build pkg-config python3 autopoint libtool autoconf patch g++ locales curl git \
 # The following packages are needed for meson build, even if they are unused for compilation
-	zlib1g-dev libicu-dev libxapian-dev liblzma-dev libcurl4-openssl-dev
+	zlib1g-dev libicu-dev libxapian-dev liblzma-dev libcurl4-openssl-dev \
+# Clean the apt-get list to keep the image size low 	
+	&& apt-get clean \
+ 	&& rm -rf /var/lib/apt/lists/*
 
 # We need a more recent version of meson to workaround https://github.com/mesonbuild/meson/issues/6684
-RUN pip install meson
+RUN pip install --no-cache-dir meson
 
 # Set the locale to UTF-8, to avoid some compilation warnings
 RUN sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && locale-gen
